<resources>
    <string name="app_name">Donation</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Donation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Cash</string>
    <string name="banking">Online Banking</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="reportTitle">Report</string>
    <string name="second_fragment_label">222</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>
</resources>